force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/BMCServiceDesk__Client_User_Imports__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for importing clients.</description>
    <label>Client User Imports</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClientUserImports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>