force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Account__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Account__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>