force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Client_User_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Client_User_Name__c</fullName>
    <description>This unique field identifies the user in the object from where the user is imported. This field can be the Lightweight Directory Access Protocol (LDAP) or Active Directory username or any other similar identifier.</description>
    <label>Client User Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>