force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CompanyName__c</fullName>
    <description>This field stores the company linked to the client</description>
    <label>CompanyName</label>
    <length>80</length>
    <type>Text</type>
</CustomField>