force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Department__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Department__c</fullName>
    <description>This field stores the department linked to the client</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>