force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Division__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Division__c</fullName>
    <description>This field stores the division linked to the client</description>
    <label>Division</label>
    <length>80</length>
    <type>Text</type>
</CustomField>