force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Extension__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Extension__c</fullName>
    <description>This field stores the extension linked to the client</description>
    <label>Extension</label>
    <type>Phone</type>
</CustomField>