force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Fax__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Fax__c</fullName>
    <description>This field stores the fax linked to the client</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>