force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Federation_ID__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Federation_ID__c</fullName>
    <label>Federation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>