force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__IsActive__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field stores the value if the client is active or inactive</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>