force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Last_Name__c</fullName>
    <description>This field stores the last name of the client</description>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>