force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__MobilePhone__c</fullName>
    <description>This field stores the mobile number linked to the client</description>
    <label>MobilePhone</label>
    <type>Phone</type>
</CustomField>