force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__pager__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__pager__c</fullName>
    <description>This field stores the pager number linked to the client</description>
    <label>pager</label>
    <length>25</length>
    <type>Text</type>
</CustomField>