force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Phone__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Phone__c</fullName>
    <description>This field stores the phone number linked to the client</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>