force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__PostalCode__c</fullName>
    <description>This field stores the postal code linked to the client</description>
    <label>PostalCode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>