force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Profile__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Profile__c</fullName>
    <label>Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>