force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__State__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__State__c</fullName>
    <description>This field stores the state linked to the client</description>
    <label>State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>