force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Street__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Street__c</fullName>
    <description>This field stores the street linked to the client</description>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>