force-app/main/default/objects/BMCServiceDesk__Client_User_Imports__c/fields/BMCServiceDesk__Title__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Title__c</fullName>
    <description>This field stores the title of the client</description>
    <label>Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>